AC - redoing cloud functions in js instead of ts

--- a/firebase.json
+++ b/firebase.json
@@ -1,8 +1,9 @@
 {
   "functions": {
+    "source": "functions",
     "predeploy": [
-      "npm --prefix \"$RESOURCE_DIR\" run lint",
-      "npm --prefix \"$RESOURCE_DIR\" run build"
+      "npm --prefix functions run lint",
+      "npm --prefix functions run build"
     ]
   },
   "hosting": {
@@ -12,11 +13,15 @@
       "**/.*",
       "**/node_modules/**"
     ],
-    "rewrites": [
-      {
-        "source": "/api/v1/**",
-        "function": "webApi"
-      }
-    ]
+    "rewrites": [ {
+      "source": "/version",
+      "function": "version"
+    }, {
+      "source": "/screenshot",
+      "function": "screenshot"
+    }, {
+      "source": "/posts",
+      "function": "posts"
+    }]
   }
 }
