--- a/functions/package.json
+++ b/functions/package.json
@@ -1,28 +1,14 @@
 {
   "name": "functions",
-  "scripts": {
-    "lint": "tslint --project tsconfig.json",
-    "build": "tsc",
-    "serve": "npm run build && firebase serve --only functions",
-    "shell": "npm run build && firebase functions:shell",
-    "start": "npm run shell",
-    "deploy": "firebase deploy --only functions",
-    "logs": "firebase functions:log"
-  },
-  "main": "lib/index.js",
-  "dependencies": {
-    "body-parser": "^1.18.3",
-    "express": "^4.16.4",
-    "firebase-admin": "~6.0.0",
-    "firebase-functions": "^2.1.0",
-    "puppeteer": "^1.11.0"
-  },
-  "devDependencies": {
-    "tslint": "~5.8.0",
-    "typescript": "~2.8.3"
-  },
+  "description": "Useful Puppeteer Firebase Cloud Functions",
   "engines": {
     "node": "8"
+  },
+  "dependencies": {
+    "express": "^4.16.3",
+    "firebase-admin": "^5.13.1",
+    "firebase-functions": "^2.0.2",
+    "puppeteer": "^1.6.2"
   },
   "private": true
 }
