--- a/firebase.json
+++ b/firebase.json
@@ -2,12 +2,11 @@
   "functions": {
     "source": "functions",
     "predeploy": [
-      "npm --prefix functions run lint",
-      "npm --prefix functions run build"
+      "npm --prefix \"$RESOURCE_DIR\" run lint"
     ]
   },
   "hosting": {
-    "public": "public",
+    "public": "dist/i-proving-upgrade",
     "ignore": [
       "firebase.json",
       "**/.*",
